--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ header{
 #intro{
   color: black;
   background-size: cover;
-  background-image: url("https://a.travel-assets.com/findyours-php/viewfinder/images/res40/70000/70801-Eastern-Beach.jpg");
+  background-image: url("https://images.unsplash.com/photo-1496092607007-ca127e0b6a10?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
   filter: brightness(100%);
 }
 .mask{
