--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ header{
 #intro{
   color: black;
   background-size: cover;
-  background-image: url("https://images.unsplash.com/photo-1496092607007-ca127e0b6a10?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
+  background-image: url("https://wallpapershome.com/images/pages/ico_h/19257.jpg";
   filter: brightness(100%);
 }
 .mask{
