--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ header{
 #intro{
   color: black;
   background-size: cover;
-  background-image: url("";
+  background-image: url("https://picography.co/wp-content/uploads/2018/10/picography-snowboard-man-snow-mountain-alex-knight-small-768x512.jpg";
   filter: brightness(100%);
 }
 .mask{
