--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ header{
 #intro{
   color: black;
   background-size: cover;
-  background-image: url("https://picography.co/wp-content/uploads/2018/10/picography-snowboard-man-snow-mountain-alex-knight-small-768x512.jpg";
+  background-image: url("https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80";
   filter: brightness(100%);
 }
 .mask{
