--- a/index.css
+++ b/index.css
@@ -276,7 +276,7 @@ progress{
   height: 24px;
 }
 .last-row-col{
-  background-image: url(images/perfect.jpg);
+  background-image: url(perfect.jpg);
   background-position: center;
   margin-right: 19%;
   }
